Added support for quiz api.
